# ros-mcp-UR3-antigravity

./: .dockerignore  .gitignore  Comandos úteis.md  Dockerfile.antigravity  Dockerfile.rosbridge  README.md  RESET_INSTRUCTIONS.md  docker-compose.yml  query_rosbridge.py
CoppeliaScripts/: Tigela_CoppeliaSim  UR3_coppeliaSim
prompts/: Inicia em docker - UR3 Real e CoppeliaSim.md  IniciaConexão- URSim e Coppelia
ros-mcp-server/: s_curve.py  s_curve_horizontal.py  s_curve_repetitive.py  server.json  server.py  stop_motion.py
ros-mcp-server/.github/workflows/: publish.yml  publish_pypi.yml
ros-mcp-server/docker/auxiliary/: Dockerfile.gemini  README.md  docker-compose.yml
ros-mcp-server/examples/4_unitree_go2/real_robot/go2_ws/src/go2_control/: package.xml  setup.cfg  setup.py
ros-mcp-server/examples/4_unitree_go2/real_robot/go2_ws/src/go2_control/go2_control/: __init__.py  go2_backend.py  go2_service_node.py
ros-mcp-server/examples/4_unitree_go2/real_robot/go2_ws/src/go2_interfaces/: CMakeLists.txt  package.xml
ros-mcp-server/examples/4_unitree_go2/real_robot/go2_ws/src/go2_interfaces/srv/: Move.srv  SetBool.srv  SetFloat.srv  SetInt.srv  Trigger.srv
ros-mcp-server/examples/8_images/: ros_mcp_images_demo.launch.py
ros-mcp-server/robot_specifications/: unitree_go2.yaml
ros-mcp-server/ros_mcp/: __init__.py  integration.py
ros-mcp-server/ros_mcp/prompts/: __init__.py  test_actions_tools.py  test_nodes_tools.py  test_parameters_tools.py  test_services_tools.py
scripts/: entrypoint.sh  prepare_offline.sh  uninstall.sh
(+15 files in other folders)
