<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_control</name>
  <version>1.0.0</version>
  <description>ROS 2 control node for Unitree Go2 quadruped robot</description>
  <maintainer email="bharat.jain@plaksha.edu.in">Bharat Jain</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>go2_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
